src/objects/MUSW__License_Contact__c.object
<CustomObject>
    <fields>
        <fullName>License_Contact_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>License Contact Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Contact_Role__c</fullName>
        <label>License Contact Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ONR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Contact_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>License Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>License Contacts</relationshipLabel>
        <relationshipName>License_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>